<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.hibegin</groupId>
    <artifactId>zrlog-base</artifactId>
    <packaging>pom</packaging>
    <version>3.2.103</version>
    <modules>
        <module>zrlog-admin-token</module>
        <module>zrlog-service</module>
        <module>zrlog-common</module>
        <module>zrlog-data</module>
    </modules>
    <name>ZrLog Base</name>
    <description>ZrLog base logic code repo</description>
    <url>https://www.zrlog.com</url>

    <properties>
        <java.version>11</java.version>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.test.skip>true</maven.test.skip>
        <sws.version>4.0.100</sws.version>
        <project.build.outputTimestamp>2025-08-14T14:19:31Z</project.build.outputTimestamp>
        <gpg.passphrase/>
    </properties>

    <repositories>
        <repository>
            <id>central-snapshots</id>
            <url>https://central.sonatype.com/repository/maven-snapshots/</url>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </repository>
        <repository>
            <id>central-center</id>
            <url>https://repo1.maven.org/maven2/</url>
            <releases>
                <enabled>true</enabled>
            </releases>
        </repository>
    </repositories>

    <licenses>
        <license>
            <name>The Apache Software License, Version 2.0</name>
            <url>https://apache.org/licenses/LICENSE-2.0.txt</url>
        </license>
    </licenses>
    <scm>
        <connection>scm:git:https://github.com/zrlog-extensions/zrlog-base</connection>
        <developerConnection>scm:git:https://github.com/zrlog-extensions/zrlog-base</developerConnection>
        <url>https://github.com/zrlog-extensions/zrlog-base</url>
    </scm>

    <developers>
        <developer>
            <email>support@zrlog.com</email>
            <url>https://blog.zrlog.com</url>
        </developer>
    </developers>

    <issueManagement>
        <system>Github Issue</system>
        <url>https://github.com/zrlog-extensions/zrlog-base</url>
    </issueManagement>

    <dependencies>
        <dependency>
            <groupId>com.hibegin</groupId>
            <artifactId>simplewebserver</artifactId>
            <version>${sws.version}</version>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.13.1</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.hibegin</groupId>
                <artifactId>simplewebserver</artifactId>
                <version>${sws.version}</version>
            </dependency>
            <dependency>
                <groupId>com.hibegin</groupId>
                <artifactId>zrlog-common</artifactId>
                <version>3.2.103</version>
            </dependency>
            <dependency>
                <groupId>com.hibegin</groupId>
                <artifactId>zrlog-data</artifactId>
                <version>3.2.103</version>
            </dependency>
            <dependency>
                <groupId>com.hibegin</groupId>
                <artifactId>zrlog-service</artifactId>
                <version>3.2.103</version>
            </dependency>
            <dependency>
                <groupId>com.google.code.gson</groupId>
                <artifactId>gson</artifactId>
                <version>2.13.1</version>
            </dependency>
            <dependency>
                <groupId>com.hibegin</groupId>
                <artifactId>common-dao</artifactId>
                <version>1.1.5</version>
            </dependency>
            <dependency>
                <groupId>com.mysql</groupId>
                <artifactId>mysql-connector-j</artifactId>
                <version>9.3.0</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                    <release>${java.version}</release>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>2.2.1</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar-no-fork</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.2.0</version>
                <configuration>
                    <archive>
                        <manifestEntries>
                            <Multi-Release>true</Multi-Release>
                        </manifestEntries>
                    </archive>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>3.11.2</version>
                <executions>
                    <execution>
                        <id>attach-javadocs</id>
                        <phase>deploy</phase>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-gpg-plugin</artifactId>
                <version>1.6</version>
                <executions>
                    <execution>
                        <id>sign-artifacts</id>
                        <phase>deploy</phase>
                        <goals>
                            <goal>sign</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <passphrase>${gpg.passphrase}</passphrase>
                    <useAgent>false</useAgent>
                    <executable>gpg</executable>
                    <gpgArguments>
                        <argument>--pinentry-mode</argument>
                        <argument>loopback</argument>
                    </gpgArguments>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.sonatype.central</groupId>
                <artifactId>central-publishing-maven-plugin</artifactId>
                <version>0.8.0</version>
                <extensions>true</extensions>
                <configuration>
                    <publishingServerId>central</publishingServerId>
                    <autoPublish>true</autoPublish>
                    <waitUntil>published</waitUntil>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
